# limit_order_book

./: .gitignore  CMakeLists.txt
data/: orders.csv  orders_100k.csv
include/limit_order_book/: data.hpp  lob.hpp  order.hpp
libs/generate-data/: CMakeLists.txt  generate_data.cpp  generate_data.hpp
src/: constants.hpp  data.cpp  lob.cpp  main.cpp
